# 3r-monitoring

./: .gitignore  README.md  pyproject.toml  requirements.txt
R-scripts/: R-scripts-flowchart.md  mesh_term_selector.R  publication_counts_meshterm.xlsx  pubmed_affiliation_extract.R  swiss_publication_mesh_scanner.R  swiss_publication_mesh_shares.R
data/goldhamster/predictions/: preds_1_goldhamster_model.h5.eval.json  preds_1_goldhamster_model_2025-04-25_13-48-48.h5.eval.json
notebooks/: 01_goldhamster_corpus_stats.ipynb  02_goldhamster_evaluation.ipynb  02_pubmed_analysis_statistics.ipynb
r3_monitoring/: __init__.py
r3_monitoring/data/: __init__.py  goldhamster_loader.py  pubmed_fetcher.py  schemata.py
r3_monitoring/evaluation/: __init__.py  metrics.py
r3_monitoring/models/: __init__.py
r3_monitoring/models/pubmedbert_classifier/: __init__.py  model.py  model_tensorflow_backup.py
r3_monitoring/utils/: __init__.py  mlflow_helpers.py
scripts/: download_goldhamster_labels.py  download_pubmed_metadata.py  enhanced_pubmed_downloader.py  evaluate_model.py  mlflow_gc.py  process_pubmed_articles.py  scrape_pubmed_articles.py  train_and_eval_goldhamster.py  train_model.py
scripts/archive/: migrate_mlflow_python.py  train_and_eval_goldhamster.py  train_biobert_custom.py
src/: data_loaders.py  evaluation.py  model.py  utils.py
src/data/: download_pubmed_metadata.py
src/models/: biobert_goldhamster.py  goldhamster_huggingface.py
