[project]
name = "3r-monitoring"
version = "0.1.0"
description = "3R Monitoring: Text classification and evaluation for scientific literature"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mlflow>=3.6.0",
    "numpy>=1.26.4",
    "pandas>=2.3.3",
    "pyyaml>=6.0",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]

[tool.setuptools]
packages = ["r3_monitoring"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
