[project]
name = "3r-monitoring"
version = "0.1.0"
description = "3R Monitoring: Text classification and evaluation for scientific literature"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "mlflow>=3.6.0",
    "numpy>=1.26.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "typer>=0.20.0",
]

[tool.setuptools]
packages = ["r3_monitoring"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
